attempt to fix left margin on mobile on contact page

--- a/css/pages.css
+++ b/css/pages.css
@@ -144,7 +144,7 @@
 
 /* Contact */
   .contact .content div.contact-info{
-    margin: 80px 0;
+    margin: 80px 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
